--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="hero-content">
           <div>
             <h1 class="fade-in-up">Banasura Lake View</h1>
-            <a class="btn invert cta-animate" href="contact.html">Contact Us</a>
+            <a class="modern-contact-btn pulse" href="contact.html">
+              Contact Us
+            </a>
           </div>
         </div>
       </section>
