--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Banasura Lake View | Reconnect . Refresh . Rejuvenate</title>
     <meta name="description" content="Nirvanica Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
-    <link rel="preload" href="assets/video/WhatsApp Video 2025-10-19 at 10.35.48 PM.mp4" as="video" type="video/mp4" />
+    <link rel="preload" href="assets/video/WhatsApp_Video_2025-10-19 at 10.35.48 PM.mp4" as="video" type="video/mp4" />
     <link rel="preload" href="assets/img/WhatsApp%20Image%202025-09-26%20at%208.21.02%20PM.jpeg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
@@ -38,7 +38,7 @@
 
     <main>
       <section class="hero">
-        <video src="assets/video/WhatsApp Video 2025-10-19 at 10.35.48 PM.mp4" autoplay muted loop playsinline aria-label="Drone shot of resort greenery" poster="assets/img/images.jpeg"></video>
+        <video src="assets/video/WhatsApp_Video_2025-10-19_at_10.35.48_PM.mp4" autoplay muted loop playsinline aria-label="Drone shot of resort greenery" poster="assets/img/images.jpeg"></video>
         <div class="hero-content">
           <div>
             <h1 class="fade-in-up">Banasura Lake View</h1>
