--- a/rooms.html
+++ b/rooms.html
@@ -44,7 +44,7 @@
           </div>
           <div class="grid cols-3 reveal">
             <div class="card">
-              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/WhatsApp%20Image%202025-10-15%20at%208.16.27%20PM.jpeg" alt="Ground Floor Room" width="400" height="300" />
+              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/WhatsApp_20Image_202025-10-15-20at_208.16.27%20PM.jpeg" alt="Ground Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>Ground Floor</h3>
                 <p class="meta">Comfortable accommodation • Modern amenities • Hot water • Tea/coffee • Smart TV</p>
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="card">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp%20Image%202025-10-15%20at%208.16.26%20PM%20(1).jpeg" alt="First Floor Room" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_20Image_202025-10-15_20at_208.16.26%20PM_20(1).jpeg" alt="First Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>First Floor</h3>
                 <p class="meta">Spacious rooms • Balcony • Hot water • Tea/coffee • Wi‑Fi • Smart TV</p>
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="card">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp%20Image%202025-10-15%20at%208.16.26%20PM.jpeg" alt="Dormitory" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_20Image_202025-10-15_20at_208.16.26_20PM.jpeg" alt="Dormitory" width="400" height="300" />
               <div class="card-body">
                 <h3>Dormitory</h3>
                 <p class="meta">Shared accommodation • Bunk beds • Hot water • Common area • Smart TV</p>
