--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Banasura Lake View | Reconnect . Refresh . Rejuvenate</title>
     <meta name="description" content="Nirvanica Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
-    <link rel="preload" href="assets/video/WhatsApp_Video_2025-10-19 at 10.35.48 PM.mp4" as="video" type="video/mp4" />
-    <link rel="preload" href="assets/img/WhatsApp%20Image%202025-09-26%20at%208.21.02%20PM.jpeg" as="image" />
+    <link rel="preload" href="assets/video/WhatsApp_Video_2025-10-19_at-10.35.48-PM.mp4" as="video" type="video/mp4" />
+    <link rel="preload" href="assets/img/WhatsApp_Image_2025-09-26_at_8.21.02_PM.jpeg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
     <meta property="og:type" content="website" />
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="card fade-in-up delay-2">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp%20Image%202025-10-19%20at%208.52.10%20AM.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-19_at_8.52.10_AM.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
               <div class="card-body">
                 <h3>Kerala-inspired Architecture</h3>
                 <p class="meta">Traditional design meets modern comfort in our thoughtfully crafted spaces.</p>
