--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <div class="grid" style="gap:14px;">
               <div class="card">
                 <div class="card-body">
-                  <h3>Reach Us</h3>
+                  <h3>For Bookings</h3>
                   <p><strong>Phone:</strong> <a href="tel:+919562944780">+91 9562944780</a></p>
                   <p><strong>Email:</strong> <a href="mailto:joyaljaimon20@gmail.com">joyaljaimon20@gmail.com</a></p>
                   <p class="muted">Banasura Lake View Resort, Wayanad, Kerala</p>
