--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/gettyimages-1373274919-2048x2048.jpg" alt="Ripples across the calm lake" width="1200" height="800" data-lightbox />
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/sun.jpg" alt="Sunset over the hills" width="1200" height="800" data-lightbox />
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/view.jpeg" alt="Resort view from the lake" width="1200" height="800" data-lightbox />
-            <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/djj%20mixer.jpg" alt="DJ console for evening vibes" width="1200" height="800" data-lightbox />
+            <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/djj_mixer.jpg" alt="DJ console for evening vibes" width="1200" height="800" data-lightbox />
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/IMG_20200823_184309.jpg" alt="Hillside sunset panorama" width="800" height="1200" data-lightbox />
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/banasura-sagar.jpg" alt="Banasura Sagar reservoir" width="1200" height="800" data-lightbox />
             <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/meenmutty-waterfalls-1729930794_06501f2bae3e3b11d3ed.webp" alt="Meenmutty waterfalls in Wayanad" width="1200" height="800" data-lightbox />
