--- a/rooms.html
+++ b/rooms.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/cottage-3.jpg" />
     <meta name="theme-color" content="#1f4d3a" />
-    <link rel="preload" href="assets/img/WhatsApp%20Image%202025-10-15%20at%208.16.27%20PM.jpeg" as="image" />
+    <link rel="preload" href="assets/img/WhatsApp_Image_2025-10-15_at_8.16.27_PM.jpeg" as="image" />
     <link rel="icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
@@ -44,7 +44,7 @@
           </div>
           <div class="grid cols-3 reveal">
             <div class="card">
-              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/WhatsApp_20Image_202025-10-15-20at_208.16.27%20PM.jpeg" alt="Ground Floor Room" width="400" height="300" />
+              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/WhatsApp_Image_2025-10-15-at_8.16.27_PM.jpeg" alt="Ground Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>Ground Floor</h3>
                 <p class="meta">Comfortable accommodation • Modern amenities • Hot water • Tea/coffee • Smart TV</p>
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="card">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_20Image_202025-10-15_20at_208.16.26%20PM_20(1).jpeg" alt="First Floor Room" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-15_at_8.16.26_PM_(1).jpeg" alt="First Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>First Floor</h3>
                 <p class="meta">Spacious rooms • Balcony • Hot water • Tea/coffee • Wi‑Fi • Smart TV</p>
@@ -60,7 +60,7 @@
               </div>
             </div>
             <div class="card">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_20Image_202025-10-15_20at_208.16.26_20PM.jpeg" alt="Dormitory" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-15_at_8.16.26_PM.jpeg" alt="Dormitory" width="400" height="300" />
               <div class="card-body">
                 <h3>Dormitory</h3>
                 <p class="meta">Shared accommodation • Bunk beds • Hot water • Common area • Smart TV</p>
