--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Banasura Lake View | Reconnect . Refresh . Rejuvenate</title>
     <meta name="description" content="Nirvanica Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
     <link rel="preload" href="assets/video/resort.mp4" as="video" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
     <link rel="preload" href="assets/img/WhatsApp_Image_2025-09-26_at_8.21.02_PM.jpeg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
