--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
       <section class="hero">
-        <video src="assets/video/WhatsApp Video 2025-10-19 at 10.35.48 PM.mp4" autoplay muted loop playsinline aria-label="Drone shot of resort greenery" poster="assets/img/images.jpeg"></video>
+        <video src="assets/video/resort.mp4" autoplay muted loop playsinline aria-label="Drone shot of resort greenery" poster="assets/img/images.jpeg"></video>
         <div class="hero-content">
           <div>
             <h1 class="fade-in-up">Banasura Lake View</h1>
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="card fade-in-up delay-2">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp%20Image%202025-10-19%20at%208.52.10%20AM.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-19_at_8.52.10_AM.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
               <div class="card-body">
                 <h3>Kerala-inspired Architecture</h3>
                 <p class="meta">Traditional design meets modern comfort in our thoughtfully crafted spaces.</p>
