--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
               <p>We keep things simple, quiet, and human. Wake to birdsong, walk through spice plantations, and end your day under a sky of stars. We welcome families, solo travelers, and seekers of stillness.</p>
             </div>
             <div class="card">
-              <img src="assets/img/WhatsApp_Image_2025-10-19_at_8.52.10_AM.jpeg" alt="Kerala-inspired architecture with traditional design" style="width: 100%; height: 300px; object-fit: cover;" />
+              <img src="assets/img/Kerala-inspired Architecture.jpeg" alt="Kerala-inspired architecture with traditional design" style="width: 100px; height: 300px; object-fit: cover;" />
               <div class="card-body">
                 <h3>Traditional Design</h3>
                 <p class="meta">Authentic Kerala architecture with modern comfort and natural beauty.</p>
