--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="card fade-in-up delay-2">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-19_at_8.52.10_AM.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/Kerala-inspired Architecture.jpeg" alt="Kerala-inspired architecture with traditional design" width="400" height="300" />
               <div class="card-body">
                 <h3>Kerala-inspired Architecture</h3>
                 <p class="meta">Traditional design meets modern comfort in our thoughtfully crafted spaces.</p>
