--- a/rooms.html
+++ b/rooms.html
@@ -44,7 +44,7 @@
           </div>
           <div class="grid cols-3 reveal">
             <div class="card">
-              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/WhatsApp_Image_2025-10-15-at_8.16.27_PM.jpeg" alt="Ground Floor Room" width="400" height="300" />
+              <img loading="eager" decoding="async" fetchpriority="high" src="assets/img/room_1.jpeg" alt="Ground Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>Ground Floor</h3>
                 <p class="meta">Comfortable accommodation • Modern amenities • Hot water • Tea/coffee • Smart TV</p>
