--- a/rooms.html
+++ b/rooms.html
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="card">
-              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/WhatsApp_Image_2025-10-15_at_8.16.26_PM_(1).jpeg" alt="First Floor Room" width="400" height="300" />
+              <img loading="lazy" decoding="async" fetchpriority="low" src="assets/img/room_2.jpeg" alt="First Floor Room" width="400" height="300" />
               <div class="card-body">
                 <h3>First Floor</h3>
                 <p class="meta">Spacious rooms • Balcony • Hot water • Tea/coffee • Wi‑Fi • Smart TV</p>
