--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/fevicon.jpeg" />
+    <meta property="og:image" content="assets/fevicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
     <link rel="icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
