Fix form action URL in contact.html

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <div class="card contact-card">
               <div class="card-body">
                 <h3>Inquiry Form</h3>
-                <form action="https://formspree.io/f/https://formspree.io/f/mkgpqyqr" method="POST">
+                <form action="https://formspree.io/f/mkgpqyqr" method="POST">
   <input class="input" type="text" name="name" placeholder="Your name" required />
   <input class="input" type="email" name="email" placeholder="Email" required />
   <input class="input" type="tel" name="phone" placeholder="Phone / WhatsApp" />
