Fix favicon link and type in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/fevicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
-    <link rel="icon" href="assetsi/fevicon.png" type="assets/img/png" />
+    <link rel="icon" href="assets/fevicon.png" type="assets/img/fevicon.png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
