--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="assets/fevicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
     <link rel="icon" href="assets/fevicon.png" type="assets/img/fevicon.png" />
+    <meta property="og:image" content="assets/img/fevicon.png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
