Update favicon references in index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/fevicon.png" />
+    <meta property="og:image" content="assets/favicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
-    <link rel="icon" href="assets/fevicon.png" type="assets/img/fevicon.png" />
-    <meta property="og:image" content="assets/img/fevicon.png" />
+    <link rel="icon" href="assets/favicon.png" type="assets/img/favicon.png" />
+    <meta property="og:image" content="assets/img/favicon.png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
