--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/favicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
-    <link rel="icon" href="assets/favicon.png" type="assets/img/favicon.png" />
-    <meta property="og:image" content="assets/img/favicon.png" />
+   <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
