--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="assets/video/resort.mp4" as="video" type="video/mp4" />
     <link rel="preload" href="assets/img/site.jpeg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
-    <meta property="og:description" content="Reconnect . Refresh . Rejuvenate — eco-friendly cottages in Wayanad, Kerala." />
+    <meta property="og:description" content="eco-friendly cottage in Wayanad, Kerala." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/favicon.png" />
     <meta name="theme-color" content="#1f4d3a" />
