--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Banasura Lake View | Reconnect . Refresh . Rejuvenate</title>
     <meta name="description" content="Nirvanica Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
     <link rel="preload" href="assets/video/resort.mp4" as="video" type="video/mp4" />
-    <link rel="preload" href="assets/img/site.jpeg" as="image" />
+    <link rel="preload" href="assets/img/site.jpg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
     <meta property="og:description" content="eco-friendly cottage in Wayanad, Kerala." />
     <meta property="og:type" content="website" />
