--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Banasura Lake View | Reconnect . Refresh . Rejuvenate</title>
-    <meta name="description" content="Nirvanica Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
+    <title>Banasura Lake View | eco-friendly cottages, nature, and peace</title>
+    <meta name="description" content="Banasura lake view Resort, Wayanad, Kerala — eco-friendly cottages, nature, and peace." />
     <link rel="preload" href="assets/video/resort.mp4" as="video" type="video/mp4" />
     <link rel="preload" href="assets/img/site.jpg" as="image" />
     <meta property="og:title" content="Banasura Lake View" />
