--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About | Banasura Lake View</title>
-    <meta name="description" content="Our story — eco-friendly and peaceful living at Nirvanica Resort, Wayanad." />
-    <meta property="og:title" content="About | Nirvanica Resort" />
-    <meta property="og:description" content="Our story — eco-friendly and peaceful living at Nirvanica Resort." />
+    <meta name="description" content="Our story — eco-friendly and peaceful living at Banasura Lake View, Wayanad." />
+    <meta property="og:title" content="About | Banasura Lake View" />
+    <meta property="og:description" content="Our story — eco-friendly and peaceful living at Banasura Lake View." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/plantation-1.jpg" />
     <meta name="theme-color" content="#1f4d3a" />
@@ -28,7 +28,6 @@
             <a href="gallery.html">Gallery</a>
             <a href="rooms.html">Rooms & Rates</a>
             <a href="contact.html">Contact</a>
-            <a href="nirvanica.html">Nirvanica Resort</a>
           </div>
         </nav>
       </div>
