--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact | Banasura Lake View</title>
-    <meta name="description" content="Contact details, map, and booking inquiry form for Nirvanica Resort." />
-    <meta property="og:title" content="Contact | Nirvanica Resort" />
-    <meta property="og:description" content="Contact details, map, and booking inquiry form for Nirvanica Resort." />
+    <meta name="description" content="Contact details, map, and booking inquiry form for Banasura Lake View." />
+    <meta property="og:title" content="Contact | Banasura Lake View" />
+    <meta property="og:description" content="Contact details, map, and booking inquiry form for Banasura Lake View." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/images.jpeg" />
     <meta name="theme-color" content="#1f4d3a" />
@@ -28,7 +28,6 @@
             <a href="gallery.html">Gallery</a>
             <a href="rooms.html">Rooms & Rates</a>
             <a href="contact.html" aria-current="page">Contact</a>
-            <a href="nirvanica.html">Nirvanica Resort</a>
           </div>
         </nav>
       </div>
