Update Open Graph title for gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gallery | Banasura Lake View</title>
     <meta name="description" content="Scenic images of cottages, food, and campfire moments at Nirvanica." />
-    <meta property="og:title" content="Gallery | Nirvanica Resort" />
+    <meta property="og:title" content="Gallery | Banasura Lake View" />
     <meta property="og:description" content="Cottages, cuisine, and campfire moments at Nirvanica." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/cottage-2.jpg" />
@@ -28,7 +28,6 @@
             <a href="gallery.html" aria-current="page">Gallery</a>
             <a href="rooms.html">Rooms & Rates</a>
             <a href="contact.html">Contact</a>
-            <a href="nirvanica.html">Nirvanica Resort</a>
           </div>
         </nav>
       </div>
