--- a/rooms.html
+++ b/rooms.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="assets/img/cottage-3.jpg" />
     <meta name="theme-color" content="#1f4d3a" />
     <link rel="preload" href="assets/img/WhatsApp_Image_2025-10-15-at_8.16.27_PM.jpeg" as="image" />
-    <link rel="icon" href="assets/favicon.png" type="image/png" />
+    <link rel="icon" href="assets/Fevicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
